--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,16 +1,18 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 0rem;
+  
 }
 
-.main {
+ .main {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  width: 100%;
+  padding: 0rem 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: top;
   align-items: center;
-}
+  background-color: #385D66;
+} 
 
 .footer {
   display: flex;
