continuing on mb page

--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -13,6 +13,7 @@ $primary-light: #436D77;
     position: fixed;
     z-index: 1024;
     top: 0;
+    width: 100%;
 
     // flex
     // display: flex;
