--- a/styles/projectPage.module.scss
+++ b/styles/projectPage.module.scss
@@ -156,6 +156,20 @@
                 }
                 
             }
+            .gCont3 {
+                max-width: 30%;
+
+                p {
+                    color: #fff;
+                    text-align: center;
+                    font-size: 1.2rem;
+                }
+
+                img {
+                    max-width: 100%;
+                }
+                
+            }
 
 
         }
@@ -212,7 +226,10 @@
                 flex-direction: column;
                 margin: 0;
                 
-                img {
+                .gCont3 {
+                    max-width: 50%;
+                }
+                .gCont {
                     max-width: 60%;
                 }
 
