--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -14,6 +14,9 @@ $primary-light: #436D77;
     z-index: 1024;
     top: 0;
     width: 100%;
+    background: rgba(67,109,119,0.8);
+    backdrop-filter: saturate(180%) blur(20px);
+
 
     // flex
     // display: flex;
