--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -12,12 +12,20 @@
     align-items: center;
     // background: rgb(56,93,102);
 
+    h1 {
+        font-size: 3.5rem;
+        color:#fff;
+        text-shadow: 0.3rem 0.3rem 0px #EC795C;
+        margin-bottom:20px;
+        margin-top: 0;
+    }
+
     .tBlock {
         display: block;
         height: 1050px;
         background: rgb(56,93,102);
         background: linear-gradient(262deg, rgba(56,93,102,1) 0%, rgba(75,114,123,1) 65%, rgba(106,147,157,1) 100%);
-        margin-bottom: 38em;
+        
         padding: 0 0 6em;
         
         .tContainer{
@@ -52,11 +60,8 @@
                 }
 
 
-                h2 {
-                    font-size: 3.5rem;
-                    color:#fff;
-                    text-shadow: 0.3rem 0.3rem 0px #EC795C;
-                    margin-bottom:20px;
+                h1 {
+                    margin-top: 0.67em;
                 }
                 .paragraph p {
                     color: #fff;
@@ -67,6 +72,67 @@
         }
 
     }
+
+    .sectionLine {
+        width: 80%;
+        height: 0px;
+        border: 4px solid #DFE0C0;
+        border-radius: 25px;
+        margin: 60px auto;
+        
+
+    }
+
+    .experience_education {
+        width: 1500px;
+        max-width: 80%;
+        display: flex;
+        margin: auto;
+        color: #fff;
+        font-size: 1.3rem;
+
+        h1 {
+            margin-bottom: 40px;
+        }
+
+        span {
+            font-weight: 800;
+            font-size: 1.5rem;
+        }
+
+        .experience {
+            width: 50%;
+            padding-right: 40px;
+            .edBody {
+                
+                .position_date {
+                    margin-bottom: 30px;
+                    margin: 20px 0;
+                    display: flex;
+                    justify-content: space-between;
+
+                }
+                
+
+            }
+        }
+        .education {
+            width: 50%;
+            padding-right: 40px;
+            .exBody {
+                .major_date {
+                    margin: 20px 0;
+                    margin-bottom: 30px;
+                    display: flex;
+                    justify-content: space-between;
+
+                }
+                
+            }
+        }
+
+
+    }
     
     
 }
@@ -93,26 +159,6 @@
 
 }
 
-@media screen and (max-width:1280px) {
-    .pageBody {
-        .tBlock {
-            .tContainer {
-                padding-top: 100px;
-            
-                max-width: auto;
-                width: 80%;
-                align-items: center;
-
-                img {
-                    height: 350px;
-                }
-
-            }
-        }
-    }
-
-
-}
 
 @media screen and (max-width:958px) {
     .pageBody {
