--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -94,6 +94,12 @@ $primary-light: #436D77;
         text-shadow: 0.2rem 0.2rem 0px #EC795C;
 
       }
+      
+    }
+
+    .logo p:hover {
+      cursor: pointer;
+      
     }
 
 
@@ -137,9 +143,14 @@ $primary-light: #436D77;
     // display: none;
     ul {
       padding: 0%;
+      transform: translate(0px, 0px);
+      li:nth-child(2) {
+        transform: translate(-15px, 0px);
+      }
 
       li a {
         margin: 0;
+        
       }
     }
 
@@ -149,6 +160,7 @@ $primary-light: #436D77;
     justify-content: space-between;
     padding-left: 5%;
     padding-right: 5%;
+    transition: 0.3s;
 
     .webNav ul {
       padding: 0;
@@ -156,13 +168,16 @@ $primary-light: #436D77;
       left: -100%;
       top: 3rem;
       flex-direction: column;
-      background-color: #f1bf60;
+      border: 2px solid #DFE0C0;
       width: 100%;
       border-radius: 10px;
       text-align: center;
+      animation-delay: 30ms;
       transition: 0.3s;
       box-shadow:
           0 10px 27px rgba(0, 0, 0, 0.05);
+      // background-color: #F1BF60;
+
       li {
         // margin: 2.5rem;
         padding: 0px;
@@ -175,13 +190,29 @@ $primary-light: #436D77;
           width: 100%;
           height: 100%;
           font-size: 1.5rem;
+          
+          
+          
+  
         }
+
+        
+      }
+      li:nth-child(2) {
+        button{
+          border-top: 2px solid #DFE0C0;
+          border-bottom: 2px solid #DFE0C0;
+        }
+
       }
 
-  }
+    }
+
+    
 
     .webNav.active ul {
       left: 0;
+      
     }
 
     // hamburger menu
@@ -204,6 +235,12 @@ $primary-light: #436D77;
       transform: translateY(-8px) rotate(-45deg);
     }
 
+  }
+
+  .nav.active {
+    height:64px+207px + 8px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
 
   
