--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -182,6 +182,10 @@
             text-align: center;
             margin: auto;
         }
+
+        .mobile {
+            display: none;
+        }
     }
     
     
@@ -336,6 +340,7 @@
             }
 
             .mobile {
+                display: block;
                 font-size: 1.2rem;
                 text-align: center;
                 padding-bottom: 20px;
