--- a/styles/Art.module.scss
+++ b/styles/Art.module.scss
@@ -58,60 +58,55 @@
 
     }
 
-    .artContainer {
-        margin-top:12vh;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(5, 500px);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-        max-width: 1152px;
-        margin:auto;
-        
-        
-        .artwork {
+
+}
+
+@media screen and (max-width:958px) {
+ 
+
+    .pageBody{
+    
+        .tContainer {
+            height: 80vh;
+            padding: 0 0 6em;
             display: flex;
-            justify-content: center;
-            .img-overlay {
-                background: rgba(0,0,0,0.7);
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                top: 0;
-                left: 0;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                opacity: 0;
-              }
-            img {
+            align-items: center;
+    
+    
+            .title {
+                padding: 5em 0;
                 display: block;
-                max-height: 80%;
-                max-width: 100%;
-                height: 250px;
-                
+                margin: 0 5%;
+                padding-bottom: 9vw;
+    
+                p {
+                    color:#fff;
+                    font-weight: 100;
+                    margin-top: 20px;
+                    font-size: 1.5rem;
+                    text-align: center;
+                    margin: auto;
+                    max-width: 90%;
+                }
+    
+    
+                h1 {
+
+                    font-size:10rem;
+
+                    
+                }
             }
-            
+    
+            .scrollD {
+                display: none;
+            }
+    
         }
-        .s1 {
-            padding-top: 40px;
-            grid-area: 1 / 1 / 2 / 2;
-            align-items: flex-start;
-        }
-
-        .s2 {
-            grid-area: 1 / 2 / 2 / 3;
-
-            align-items: flex-end;
-        }
-
-        .s3 {
-            padding-top: 40px;
-            grid-area: 1 / 3 / 2 / 4;
-
-            align-items: flex-start;
-        }
+    
+    
     }
+   
 
 
 }
