Changed images to use next's Image class

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -41,12 +41,17 @@ $primary-color-light: #4c727c;
 
 
     
-    img {
+    .portraitImg {
         width: 30vh;
         border-radius: 60px; 
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
         box-shadow: 0.5rem 0.5rem 0.2rem rgba(0, 0, 0, 0.3);
+
+        img {
+            width: fit-content;
+            border-radius: 60px;
+        }
 
     }
 
