--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -18,30 +18,36 @@ $primary-color-light: #528f7b;
 
 
     .phone {
-        display: flex;
         justify-content: center;
         align-items: center;
         grid-area: 1 / 2 / 2 / 3; 
-        height: 40vw;
+        height: 38.5vw;
+        display: block;
 
-        img {
+        .projectImg {
+            display: block;
+            margin:auto;
+            width: 18vw;
            
-            height: 40vw;
+            height: 100%;
         }
 
     }
 
     .desktop {
  
-        display: flex;
         justify-content: center;
         align-items: center;
         grid-area: 1 / 2 / 2 / 3; 
         height: 40vw;
+        display:block;
 
-        img {
-            margin-top: 110px;
+        .projectImg {
             height: 30vw;
+            width: 80%;
+            margin: auto;
+            margin-top: 2vw;
+
         }
 
     }
@@ -52,7 +58,7 @@ $primary-color-light: #528f7b;
         align-items: flex-end;
         justify-content: flex-start;
         flex-direction: column;
-        padding-right: 40px;
+        padding-right: 3vw;
 
         h2 {
             font-size: 2.5rem;
@@ -80,6 +86,14 @@ $primary-color-light: #528f7b;
     }
 
     
+
+}
+
+.projectD {
+
+    display:flex;
+    flex-direction: column-reverse;
+
 
 }
 
@@ -127,12 +141,14 @@ $primary-color-light: #528f7b;
         grid-gap: 5%;
         justify-content: center;
         flex-direction: column-reverse;
-        height: 478px;
+        height: 670px;
 
         .phone {
-            height: 350px;
-            img {
+            height: 500px;
+
+            .projectImg {
                 height: 330px;
+                width: 230px;
                 
             }
         }
@@ -150,18 +166,20 @@ $primary-color-light: #528f7b;
     .projectD {
         overflow: hidden;
         display: flex;
-        grid-gap: 5%;
+        grid-gap: 2%;
         justify-content: center;
         flex-direction: column-reverse;
-        height: 315px;
+        height: fit-content;
 
         .desktop {
-            height: 350px;
-            img {
-                margin-top: 10px;
+            height: fit-content;
+
+            .projectImg {
                 
+                width: auto;
+                height: fit-content;
                 width: 100%;
-                height: auto;
+
                 
             }
         }
