checking project link fixed

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -83,6 +83,7 @@ $primary-color-light: #4c727c;
 .projectAnchor {
     position: relative;
     bottom: 4rem;
+    padding:20px;
     z-index: -1;
 
 }
