--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -78,12 +78,16 @@ $primary-color-light: #4c727c;
 
     }
 
+    a {
+        margin-top: 100px;
+    }
+
 }
 
 .projectAnchor {
     position: relative;
     bottom: 4rem;
-    padding:20px;
+    //padding:20px;
     z-index: -1;
 
 }
