--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -37,10 +37,16 @@
             
 
 
-            img {
-                height: 500px;
+            .imageContainer {
+                
+                min-width: 500px;
                 border-radius: 25px;
                 box-shadow: 10px 10px 0px #F1BF60;
+
+                img {
+                    width: fit-content;
+                    border-radius: 25px;
+                }
             }
 
 
@@ -203,9 +209,12 @@
             margin:auto;
             margin-bottom: 30px;
 
-            img {
+            .imageContainer {
                 height: 70px;
-                width: auto;
+                width: 70px;
+                img {
+                    width: fit-content;
+                }
             }
         }
 
@@ -218,7 +227,7 @@
             margin-bottom: 75px;
         }
 
-        img { 
+        .imageContainer2 { 
             width: 100%;
             margin-bottom: 50px;
         }
@@ -227,10 +236,6 @@
             margin:auto;
         }
 
-        
-
-        
-        
 
     }
 
@@ -248,12 +253,24 @@
                 flex-direction: column;
                 align-items: center;
                 width: 48%;
-                img {
-                    width: 90%;
                 
+                .imageContainer {
+                    position: relative;
                     border-radius: 13px;
+                    width: 90%;
                     height: 700px;
-                    object-fit: cover;
+
+                    
+                    
+                    img {
+                        border-radius: 13px;
+                        
+                        
+                        
+                        // width: fit-content;
+                        
+                    }
+                    
                 }
 
                 p {
@@ -284,8 +301,8 @@
                 width: 80%;
                 align-items: center;
 
-                img {
-                    height: 350px;
+                .imageContainer {
+                    min-width: 350px;
                 }
 
             }
@@ -343,6 +360,8 @@
                 }
             }
         }
+
+
     }
 
 
@@ -391,7 +410,13 @@
             max-width: 90%;
         }
 
+        .sectionLine:nth-child(6) {
+            display:none;
+        }
+
+        /*Might remove as this is just display none*/
         .aboutWeb {
+            display:none;
 
             h1 {
                 width: 90%;
@@ -427,14 +452,61 @@
                 padding-bottom: 20px;
                 font-style: italic;
             }
-            P {
+            p {
                 width: 90%;
                 font-size: 1.3rem;
                 text-align: start;
             }
 
         }
+
+        .places {
+            max-width: 90%;
+
+            .title .imageContainer {
+                height: 50px;
+                margin:0;
+                margin-top: 10px;
+            }
+
+            .title {
+                align-items: flex-start;
+            }
+
+            p {
+                font-size: 1.3rem;
+                margin-bottom: 30px;
+            }
+
+        }
+
+        .formSection {
+            width: 90%;
+
+            .content {
+                flex-direction: column;
+                .contactPhoto {
+                    width: 90%;
+                    .imageContainer{
+                    width: 100%;
+                    height: 400px;
+                
+                    }
+                }
+
+                .form {
+                    width: 90%
+                }
+            };
+
+        }
+
+        .sectionLine {
+            width: 90%;
+        }
     }
+
+
 
 
 }
